--- a/CSSTraining/week3/style/store.css
+++ b/CSSTraining/week3/style/store.css
@@ -113,6 +113,7 @@
     }
 }
 
+/* ---螢幕解析度縮小，selection 若維持上面的 % 設定，會讓「選擇地區」這四個字換行，因此在 320px 時調整其寬度--- */
 @media(max-width: 320px){
     .selection{
         width: 77%;
