--- a/CSSTraining/week3/style/store.css
+++ b/CSSTraining/week3/style/store.css
@@ -7,6 +7,16 @@
     padding-left: 16px;
     margin-bottom: 60px;
 }
+/* ------新增 margin：格線概念、圖片高度+自適應-------- */
+.store-list{
+    margin: 0 -15px;
+}
+.store-list-card .photo{
+    width: 100%;
+    height: 224px;
+    object-fit: cover;
+}
+/* ------------------------------- */
 .store-list-card h3{
     padding: 12px 0;
 }
@@ -26,14 +36,13 @@
     color: #495057;
     margin-left: 20px;
 }
+/* ------新增 padding：格線概念------ */
 .store-list-card{
-    width: 31.53%;
-    margin-right: 2.7%;
+    width: 33.3333%;
     margin-top: 32px;
+    padding: 0 15px;
 }
-.card-3{
-    margin-right: 0;
-}
+/* ----------------------------------- */
 .store-info a{
     color: blue;
 }
@@ -52,6 +61,7 @@
     background-color: #000;
     text-align: center;
     padding: 20px 0;
+    color: #fff;
 }
 .store-detail:hover{
     background-color: #aa0601;
@@ -78,12 +88,11 @@
         margin-bottom: 4px;
     }
     .store-list-card{
-        width: 47.82%;
-        margin-right: 4.3%;
+        width: 50%;
         margin-top: 20px;
     }
-    .card-2, .card-4{
-        margin-right: 0;
+    .store-list-card .photo{
+        height: 164px;
     }
 }
 
@@ -108,7 +117,6 @@
     }
     .store-list-card{
         width: 100%;
-        margin-right: 0;
         margin-top: 16px;
     }
 }
